Make popups align correctly on medium sized mobile screens;
Previously the popup_content-right was only used on desktop, but as some
mobile devices might have display widths wider than 591px, the top bar
menus would go past the left edge of the screen.

--- a/packages/front/src/Popup.css
+++ b/packages/front/src/Popup.css
@@ -94,7 +94,7 @@
     top: auto !important;
   }
 
-  .desktop .popup_content-right {
+  .popup_content-right {
     transform: none;
     left: 0;
     right: auto;
